namespace Globals
{
    public static class Constants
    {
        public const string ConfigurationsPath = "Configurations/";

        public const string GameWon = "You win!";
        public const string GameOverText = "Game over";

        public const string RunningTriggerAnimator = "running";
        public const string DeadTriggerAnimator = "dead";
        public const string WonTriggerAnimator = "won";
        public const string IdleTriggerAnimator = "idle";
    }
}
